trunk/Archive2/c7/829236b9500ad6/output
main.cpp:5:10: error: no viable conversion from 'istream' (aka 'basic_istream<char>') to 'bool'
    bool b = std::cin;
         ^   ~~~~~~~~
1 error generated.
